# StereoReconstructuion

./: .gitignore  CMakeLists.txt  README.md  pcd_write.cpp
include/: DatasetLoader.h  DensePointCloudCreator.h  DepthEstimator.h  ExtrinsicsCalculator.h  Image.h  Image.hpp  MeshCreator.h  NormalCalculator.h  ReconstructionManager.h  Types.hpp
source/: DatasetLoader.cpp  DensePointCloudCreator.cpp  DepthEstimator.cpp  ExtrinsicsCalculator.cpp  MeshCreator.cpp  NormalCalculator.cpp  ReconstructionManager.cpp  normal_estimation_using_integral_images.cpp
tests/: DataSetLoaderTest.cpp  ExtrinsicsCalculatorTest.cpp  Main.cpp
